--- a/pages/login.ejs
+++ b/pages/login.ejs
@@ -59,14 +59,14 @@
 
     <div class="containerl">  
         <h1 style="font-size:large;">Login</h1>  
-        <form action="" id="form" class="form">  
+        <form action="login" id="form" class="form" method="post">
          <div class="input">  
-          <label for="email">Email</label>  
+          <label for="username">Username</label>
           <input  
            type="text"  
-           name="email"  
-           id="email"  
-           placeholder="Email"  
+           name="username"
+           id="username"
+           placeholder="Username"
            autocomplete="off"  
           />  
           <small>Error message</small>  
@@ -81,7 +81,7 @@
           />  
           <small>Error message</small>  
          </div>   
-         <button>Submit</button>  
+         <button type="submit">Submit</button>
         </form>  
        </div>  
 </body>
