--- a/pages/reg.ejs
+++ b/pages/reg.ejs
@@ -55,8 +55,8 @@
 
     <div class="containerl">  
         <h1 style="font-size: large;">Register</h1>  
-        <form action="" id="form" class="form">  
-         <div class="input">  
+        <form action="reg" id="form" class="form" method="post">
+         <div class="input">
           <label for="username">Username</label>  
           <input  
            type="text"  
@@ -64,7 +64,7 @@
            id="username"  
            placeholder="Username"  
            autocomplete="off"  
-          />  
+          /> 
           <small>Error message</small>  
          </div>  
          <div class="input">  
@@ -98,7 +98,7 @@
           />  
           <small>Error message</small>  
          </div>  
-         <button>Submit</button>  
+         <button type="submit">Submit</button>
         </form>  
        </div>  
 </body>
